expanded.rs

extern "C" {
    pub static janet_s64_type: JanetAbstractType;
}
extern "C" {
    pub static janet_u64_type: JanetAbstractType;
}
pub const JanetIntType_JANET_INT_NONE: JanetIntType = 0;
pub const JanetIntType_JANET_INT_S64: JanetIntType = 1;
pub const JanetIntType_JANET_INT_U64: JanetIntType = 2;
pub type JanetIntType = ::libc::c_uint;
extern "C" {
    pub fn janet_is_int(x: Janet) -> JanetIntType;
}
extern "C" {
    pub fn janet_wrap_s64(x: i64) -> Janet;
}
extern "C" {
    pub fn janet_wrap_u64(x: u64) -> Janet;
}
extern "C" {
    pub fn janet_unwrap_s64(x: Janet) -> i64;
}
extern "C" {
    pub fn janet_unwrap_u64(x: Janet) -> u64;
}
extern "C" {
    pub fn janet_malloc(arg1: usize) -> *mut ::libc::c_void;
}
extern "C" {
    pub fn janet_realloc(arg1: *mut ::libc::c_void, arg2: usize) -> *mut ::libc::c_void;
}
extern "C" {
    pub fn janet_calloc(arg1: usize, arg2: usize) -> *mut ::libc::c_void;
}
extern "C" {
    pub fn janet_free(arg1: *mut ::libc::c_void);
}
pub type __builtin_va_list = *mut ::libc::c_char;
impl fmt::Debug for Janet {
    #[inline]
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        f.pad(core::any::type_name::<Self>())
    }
}
impl PartialEq<Janet> for Janet {
    #[inline]
    fn eq(&self, other: &Janet) -> bool {
        unsafe { janet_equals(*self, *other) != 0 }
    }
}
impl Eq for Janet {}
impl Hash for Janet {
    #[inline]
    fn hash<H: Hasher>(&self, state: &mut H) {
        state.write_i32(unsafe { janet_hash(*self) })
    }
}
impl PartialOrd<Janet> for Janet {
    #[inline]
    fn partial_cmp(&self, other: &Janet) -> Option<Ordering> {
        let res = unsafe { janet_compare(*self, *other) };
        Some(
            match res {
                -1 => Ordering::Less,
                0 => Ordering::Equal,
                1 => Ordering::Greater,
                _ => return None,
            },
        )
    }
}
impl Ord for Janet {
    #[inline]
    fn cmp(&self, other: &Self) -> Ordering {
        let res = unsafe { janet_compare(*self, *other) };
        match res {
            -1 => Ordering::Less,
            0 => Ordering::Equal,
            1 => Ordering::Greater,
            _ => unsafe { core::hint::unreachable_unchecked() }
        }
    }
}
